<resources>
    <string name="app_name"></string>
    <string name="shr_hint_email">Email</string>
    <string name="shr_hint_photoUrl">Avatar Word (type anything)</string>
    <string name="shr_hint_fullName">Full Name</string>
    <string name="shr_hint_noteTitle">Note Title</string>
    <string name="shr_hint_noteBody">Note Content</string>
    <string name="shr_hint_phone">Phone</string>
    <string name="shr_hint_password">Password</string>
    <string name="add_notes">add</string>
    <string name="action_search">search</string>

</resources>