<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="false"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="205dp"
            android:background="@drawable/bg">

            <TextView
                android:id="@+id/topText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="138dp"
                android:text="NOTE"
                android:textColor="@color/colorSecondary"
                android:textSize="33sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/topText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="30dp"
                android:text="myidea"
                android:textSize="33sp" />

            <TextView
                android:id="@+id/topText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="10dp"
                android:text="S"
                android:textColor="@color/colorSecondary"
                android:textSize="33sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/errorTextViewId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="3dp"
                android:fontFamily="monospace"
                android:textAlignment="center"
                android:textColor="#FF0000"
                android:textFontWeight="700"
                android:textSize="16sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/successTextViewId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="3dp"
                android:fontFamily="monospace"
                android:textAlignment="center"
                android:textColor="#139504"
                android:textFontWeight="700"
                android:textSize="16sp"
                android:visibility="gone" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/loginLayoutId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/shr_hint_email"
                app:startIconDrawable="@drawable/ic_baseline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailLoginId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/shr_hint_password"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/lock_open">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginPasswordId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signUpButtonId"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentEnd="false"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="198dp"
                    android:layout_marginRight="198dp"
                    android:layout_toStartOf="@id/loginButton"
                    android:layout_toLeftOf="@id/loginButton"
                    android:text="Sign Up" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancelLoginButton"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_toStartOf="@id/loginButton"
                    android:layout_toLeftOf="@id/loginButton"
                    android:text="Cancel" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="Login" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/registerLayoutId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/shr_hint_fullName"
                app:startIconDrawable="@drawable/ic_baseline_person_outline_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullNameRegisterId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/shr_hint_phone"
                app:startIconDrawable="@drawable/ic_baseline_phone_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneRegisterId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/shr_hint_email"
                app:startIconDrawable="@drawable/ic_baseline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailRegisterId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/shr_hint_password"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/lock_open">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordRegisterId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginSignUpPageId"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentEnd="false"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="198dp"
                    android:layout_marginRight="198dp"
                    android:layout_toStartOf="@id/registerButton"
                    android:layout_toLeftOf="@id/registerButton"
                    android:text="Login" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancelRegisterButton"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_toStartOf="@id/registerButton"
                    android:layout_toLeftOf="@id/registerButton"
                    android:text="Cancel" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/registerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="Register" />

            </RelativeLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBarId"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

    </LinearLayout>


</RelativeLayout>